--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 body {
-  background-image: url("assets/images/bg2.jpg");
-  background-repeat: no-repeat;
+  background: url("assets/images/bg2.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: 50% 20%;
 }
 
 a.btn:focus {
